# libatmc

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Config.h  README.md  checks.json  codestyle.md  runtime_headers.h
.github/workflows/: presubmit.yml
cmake/: stm32_gcc.cmake  stm32_prog.cmake  target_runtime_support.cmake  target_specific.cmake
core/: CMakeLists.txt  CompilerWarnings.h  Config.h  Exception.hpp  Filters.h  Filters.hpp  FreeRTOSConfig.h  GPIOManager.cpp  GPIOManager.h  GPIOManager.hpp  I2CDevice.cpp  I2CDevice.h  I2CDevice.hpp  InplaceAtomicSet.h  InplaceVector.h  InterruptHandlers.cpp  Result.hpp  SPIDevice.cpp  SPIDevice.h  SPIDevice.hpp  SerialInterfaceDevice.h  SerialInterfaceDevice.hpp  SpinLock.h  Target.h  Task.cpp  Task.hpp  Thread.hpp  Timer.hpp  Units.h  Vector.hpp  cxxutil.h  cxxutil.hpp  entry.cpp  entry.h  rt_required.h  rt_threading_embedded.cpp  rt_threading_embedded.h  stub.cpp
core/module/: atmc.Core  atmc.IO.Embedded  atmc.IO.SerialInterfaces  core  core.Filters.hpp  core.IO.Embedded  core.IO.SerialInterfaces.hpp
core/modules/: core.Containers.hpp  core.IO.SerialInterfaces.hpp  core.Library.hpp
core/platform/: rt_threading.cpp  rt_threading.h
drivers/: AccelGyro_LSM6DS3.h  AccelGyro_LSM6DS3.hpp  CMakeLists.txt  Driver_SDInterface.h  Driver_SDInterface.hpp  Magnetometer_LIS3MDL.h  Magnetometer_LIS3MDL.hpp
drivers/module/: atmc.Drivers  core.Drivers.hpp
drivers/modules/: core.Drivers.hpp
examples/: CMakeLists.txt  MagnetometerHeading.cpp  blinky-ii.cpp  blinky.cpp  blinky_ii.cpp  fsr.cpp  sdcard.cpp  template.cpp
fatfs/source/: ffconf.h
generic/: board.h  main.cpp
libsysCore/: CompilerWarnings.h  Exception.h  Exception.hpp  InplaceAtomicSet.h  InplaceQueue.h  InplaceQueue.hpp  InplaceSet.h  InplaceString.h  InplaceVector.h  LanguageSupport.h  ManagedArray.h  Pointer.h  Result.h  Result.hpp  SpinLock.h  StringEx.h  Task.cpp  Task.h  Task.hpp  TaskEx.h  Thread.h  Thread.hpp  Timer.h  Vector.h  Vector.hpp  cxxsup.h  cxxsysint.cpp  cxxutil.h  cxxutil.hpp  rt.h  rtgeneric.cpp
libsysCore/module/: sys.hpp
readme/: ADC.md  stm32.md
stm32/: .mxproject  STM32H7xx_DMA.ld  board.cpp  board.h  stm32.ioc
stm32/Core/Src/: main.c
